--- a/.env
+++ b/.env
@@ -14,6 +14,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
+# les modes sont: dev / prod / test
 APP_ENV=dev
 APP_SECRET=f90f210d7ee8ee954e924905d734beb7
 ###< symfony/framework-bundle ###
@@ -28,5 +29,5 @@ APP_SECRET=f90f210d7ee8ee954e924905d734beb7
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root:root@127.0.0.1:3306/users"
 ###< doctrine/doctrine-bundle ###
