--- a/config/services.yaml
+++ b/config/services.yaml
@@ -29,3 +29,9 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    # variable declaration used in src/Service/Greeter
+    App\Service\Greeter:
+        arguments:
+            $name: "Max"
+
